--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,8 @@
         "pragmarx/recovery": "^0.2.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0 || ^6.0",
-        "phpunit/phpunit": "^9.3"
+        "orchestra/testbench": "^5.0 || ^6.0 || ^7.0",
+        "phpunit/phpunit": "^9.5"
     },
     "config": {
         "sort-packages": true
