--- a/composer.json
+++ b/composer.json
@@ -28,13 +28,13 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "astrotomic/php-conditional-proxy": "^0.2.0",
-        "illuminate/contracts": "^7.0 || ^8.0 || ^9.0",
-        "illuminate/database": "^7.0 || ^8.0 || ^9.0",
-        "illuminate/support": "^7.0 || ^8.0 || ^9.0",
+        "illuminate/contracts": "^7.0 || ^8.0 || ^9.0 || ^10.0",
+        "illuminate/database": "^7.0 || ^8.0 || ^9.0 || ^10.0",
+        "illuminate/support": "^7.0 || ^8.0 || ^9.0 || ^10.0",
         "pragmarx/recovery": "^0.2.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0 || ^6.0 || ^7.0",
+        "orchestra/testbench": "^5.0 || ^6.0 || ^7.0 || ^8.0",
         "phpunit/phpunit": "^9.5"
     },
     "config": {
